--- a/contact.html
+++ b/contact.html
@@ -5,12 +5,14 @@
  <link rel="stylesheet" href="reem.CSS">
 </head>
 <body>
+ <main>
   <h1>contact details</h1>
     <ul>
          <li><a href="mailto:reem.awad3@gmail.com">Send email</a></li>
          <li><a href="tel:0470211163">Call me </a></li>
          <li><a href="https://www.linkedin.com/in/reem-alawad-060596111/"> linkedin</a></li>
-    </ul> 
+    </ul>
+ </main>
 </body>
 
 
