--- a/index.html
+++ b/index.html
@@ -7,19 +7,9 @@
   <title> reem's website</title>
 </head>
 <body>
-  <header>
-    <h1>welcome to my website</h1>
-  </header>
-   
-  <section class="photo">
-    <img src="photo/photo.jpg" alt="first photo">
-    <div class="welcome">
-      <h2>Reem Alawad <br><span>Reem's first website</span></h2>
-    </div>
-
-  </section>
+  
  
-  <nav class="main-nav">
+  <header>
     <ul>
     
       <li><a href="education.html"> education </a> </li>
@@ -27,27 +17,20 @@
       <li><a href="Experience.html">Experience </a> </li>
       <li><a href="contact.html">contact me</a></li>
     </ul>
-
-  </nav>
+  </header>
   <aside>
     <img src="photo/formal.jpg" alt="my photo">
   </aside>
-  <br>
+  
+  <section>
+    <h2> career objective</h2>
+  </section>
+
     <article>
-      <h2> career objective</h2>
     <p>  Having moved to Australia 4 years ago  I am looking for employment where I can transfer  and use my organisational skills and my passion for working with people. I am a qualified Physical Education teacher from Syria but also have experience as a secretary /administration officer from UAE  and customer service here in Australia   so am very organised and punctual. I am bilingual in Arabic and English and have a positive bubbly personality. I am willing to take on a variety of roles.</p>
 
     </article>
     
- 
-
-  <section class="email">
-  <h2>send me an email</h2>
-  <form >
-    <input type="email" name="email" placeholder="enter your email" required>
-  </form>
-
-  </section>
   <footer>
     <p class="copyright"> copyright 2020 reem alawad
 
