--- a/contact.html
+++ b/contact.html
@@ -6,12 +6,22 @@
 </head>
 <body>
  <main>
+     <header>
   <h1>contact details</h1>
+</header>
+ <nav>
     <ul>
          <li><a href="mailto:reem.awad3@gmail.com">Send email</a></li>
          <li><a href="tel:0470211163">Call me </a></li>
          <li><a href="https://www.linkedin.com/in/reem-alawad-060596111/"> linkedin</a></li>
     </ul>
+</nav>
+<footer>
+     <p class="copyright"> copyright 2020 reem alawad
+ 
+     </p>
+   </footer>
+
  </main>
 </body>
 
