--- a/skills.html
+++ b/skills.html
@@ -6,8 +6,11 @@
 
     </head>
     <body>
-        <main class="skills">
-           <h1> skills</h1>
+        <main>
+       <header>
+            <h1> skills</h1>
+        </header>
+     <nav>
            <ul>
 
             <li>Communication</li>
@@ -15,6 +18,12 @@
             <li>Computer Skills </li>
             <li>Management Skills</li>
         </ul>
+    </nav>
+    <footer>
+        <p class="copyright"> copyright 2020 reem alawad
+    
+        </p>
+      </footer>
         </main>
     </body>
 </html>
