--- a/skills.html
+++ b/skills.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>skills</title>
+        <title>Skills</title>
         <link rel="stylesheet" href="reem.CSS">
 
     </head>
