--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
- <title>contact</title>
+ <title>Contact</title>
  <link rel="stylesheet" href="reem.CSS">
 </head>
 <body>
