--- a/education.html
+++ b/education.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Education</title>
+        <title>education</title>
         <link rel="stylesheet" href="reem.CSS">
 
     </head>
     <body>
-        <main class=education></main>
-        <br> <br>
-        <h1>education</h1>
-        <br><br>
+        <main>
+         <header>
+          <h1>education</h1>
+         </header>
+        <nav>
         <ul><em>
         <li>Cert 3 child care                                                                                        2018
             Strategix training 
@@ -25,6 +26,12 @@
             </li> 
         </em> 
         </ul>
+    </nav>
+    <footer>
+        <p class="copyright"> copyright 2020 reem alawad
+    
+        </p>
+      </footer>
         </main>      
 
     </body>
