--- a/education.html
+++ b/education.html
@@ -1,38 +1,26 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>education</title>
-        <link rel="stylesheet" href="reem.CSS">
-
-    </head>
-    <body>
-        <main>
-         <header>
-          <h1>education</h1>
-         </header>
-        <nav>
+  <head>
+    <title>education</title>
+    <link rel="stylesheet" href="reem.css">
+  </head>
+  <body>
+    <main>
+      <header>
+        <h1>education</h1>
+      </header>
+      <nav>
         <ul><em>
-        <li>Cert 3 child care                                                                                        2018
-            Strategix training 
-            </li>
-        <li>Cert 3 business administration                   2017
-                Strive International
-                </li>
-        <li>Adult Migrant English program- level 3					2017
-            Loganlea TAFE
-            </li>
-         <li>Bachelor of Physical Education						2015
-            Hama University
-            </li> 
-        </em> 
+            <li>Cert 3 child care 2018 Strategix training</li>
+            <li>Cert 3 business administration 2017 Strive International</li>
+            <li>Adult Migrant English program- level 3 2017 Loganlea TAFE</li>
+            <li>Bachelor of Physical Education 2015 Hama University</li>
+          </em>
         </ul>
-    </nav>
-    <footer>
-        <p class="copyright"> copyright 2020 reem alawad
-    
-        </p>
+      </nav>
+      <footer>
+        <p class="copyright">copyright 2020 reem alawad</p>
       </footer>
-        </main>      
-
-    </body>
+    </main>
+  </body>
 </html>
