--- a/index.html
+++ b/index.html
@@ -1,39 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <link rel="stylesheet" href="styles.CSS">
-  <title> reem's website</title>
-</head>
-<body>
-  
-<main>
-  <header>
-    <ul>
-    
-      <li><a href="education.html"> education </a> </li>
-      <li><a href="skills.html">skills </a> </li>
-      <li><a href="Experience.html">Experience </a> </li>
-      <li><a href="contact.html">contact me</a></li>
-    </ul>
-  </header>
-  <aside>
-    <img src="photo/formal.jpg" alt="my photo">
-  </aside>
-  
-
-    <article>
-       <h2> career objective</h2>
-    <p>  Having moved to Australia 4 years ago  I am looking for employment where I can transfer  and use my organisational skills and my passion for working with people. I am a qualified Physical Education teacher from Syria but also have experience as a secretary /administration officer from UAE  and customer service here in Australia   so am very organised and punctual. I am bilingual in Arabic and English and have a positive bubbly personality. I am willing to take on a variety of roles.</p>
-
-    </article>
-    
-  <footer>
-    <p class="copyright"> copyright 2020 reem alawad
-
-    </p>
-  </footer>
-  </main> 
-</body>
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <title> reem's website</title>
+  </head>
+  <body>
+    <main>
+      <header>
+        <ul>
+          <li><a href="education.html"> education</a></li>
+          <li><a href="skills.html">skills</a></li>
+          <li><a href="Experience.html">Experience</a></li>
+          <li><a href="contact.html">contact me</a></li>
+        </ul>
+      </header>
+      <aside>
+        <img src="photo/formal.jpg" alt="my photo">
+      </aside>
+      <article>
+        <h2>career objective</h2>
+        <p>Having moved to Australia 4 years ago I am looking for employment where I can transfer and use my organisational skills and my passion for working with people. I am a qualified Physical Education teacher from Syria but also have experience as a secretary /administration officer from UAE and customer service here in Australia so am very organised and punctual. I am bilingual in Arabic and English and have a positive bubbly personality. I am willing to take on a variety of roles.</p>
+      </article>
+      <footer>
+        <p class="copyright">copyright 2020 reem alawad</p>
+      </footer>
+    </main>
+  </body>
 </html>
