--- a/skills.html
+++ b/skills.html
@@ -1,29 +1,25 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Skills</title>
-        <link rel="stylesheet" href="reem.CSS">
-
-    </head>
-    <body>
-        <main>
-       <header>
-            <h1> skills</h1>
-        </header>
-     <nav>
-           <ul>
-
-            <li>Communication</li>
-            <li>Customer Service</li>
-            <li>Computer Skills </li>
-            <li>Management Skills</li>
+  <head>
+    <title>Skills</title>
+    <link rel="stylesheet" href="reem.CSS">
+  </head>
+  <body>
+    <main>
+      <header>
+        <h1>skills</h1>
+      </header>
+      <nav>
+        <ul>
+          <li>Communication</li>
+          <li>Customer Service</li>
+          <li>Computer Skills</li>
+          <li>Management Skills</li>
         </ul>
-    </nav>
-    <footer>
-        <p class="copyright"> copyright 2020 reem alawad
-    
-        </p>
+      </nav>
+      <footer>
+        <p class="copyright">copyright 2020 reem alawad</p>
       </footer>
-        </main>
-    </body>
+    </main>
+  </body>
 </html>
