--- a/Experience.html
+++ b/Experience.html
@@ -1,121 +1,89 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title> experience</title>
-       <link rel="stylesheet" href="reem.CSS">
-       </head>
-       <body>
-          <main >
-        <header>
-         <h1>Experience</h1>
-        </header>
-
-       <nav>
-        <h2>permanent store assistant (ALDI) </h2>
-          <ul>
-             <li>professional  customer service </li>
-             <li>filling of shelves</li>
-             <li>check dates for products </li>
-             <li>priority cashier and being in charge of checkout service</li>
-             <li>Assist customers to find items when required.</li>
-             <li>count and being responsible for till and money </li>
-             <li>refund and warranty service </li>
-             <li>prepare special buys  </li>
-          </ul>
-       </nav>
-
-            <br>
-       <nav>
-         <h2 class="woolworth">Permanent casual Checkout Service (woolworth)</h2>
-            <ul>
-              <li>Customer Service 
-              </li>
-              <li>Cashier and Self-checkout Operator
-              </li>
-              <li>Assist customers to find items when required.
-              </li>
-              <li>Closing till at end of day 
-              </li>
-            </ul>
-         </nav>
-
-          <br>
-         <nav>
-         <h2 class="vinc"> assistant (St Vincretail) </h2> 
-             <ul>
-              <li>customer service </li>
-              <li>price setting</li>
-             </ul>
-            </nav>
-
-          <br>
-          <nav>
-                <h2 class="child care">work experienc (Meadowbrook Childcare Centre) </h2>
-             <ul>
-                 <li>Supervise and monitor the safety of children.
-                 </li>
-                 <li>Prepare meals and organize mealtimes and snacks for children.
-                 </li>
-                 <li>Help children keep good hygiene.
-                 </li>
-                 <li>Change the diapers of infants and toddlers.
-                  </li>
-                 </ul>
-
-               </nav>
-          <br>
-       <nav>
-          <h2 class="Secretary">Secretary (Adaleel Engineering Consultants, Dubai) </h2>
-              <ul>
-                 <li>Managing reception</li>
-                 <li>Customer Service, answering phones, providing information to visitors
-                 </li>
-                 <li>Administration, filing, document keeping
-                 </li>
-                 <li>Computer usage including emails, Microsoft (Word, Excel, PowerPoint), and research
-                 </li>
-                </ul>
-               </nav>
-             <br>
-             <nav>
-          <h2 class="teacher">Physical Education Teacher(Adnan Eisa High School, Syria)
-              </h2>
-                  <ul>
-                      <li>Teaching the theory of physical education and health
-                      </li>
-                      <li>Teaching basic skills in athletics and sports
-                      </li>
-                      <li>Organising  and coaching school sports teams
-                      </li>
-                      <li>Encouraging students at all levels of physical ability
-                      </li>
-                      <li>Maintaining a structured classroom environment
-                      </li>
-                    </ul>
-                  </nav>
-              <br>
-                  <nav>
-                    <h2 class="UNICEF">Physical Education Teacher (UNICEF, Syria)
-                    </h2>
-                    <ul>
-                         <li>
-                            Implementing recreational programs for children living in refugee camps
-
-                         </li>
-                         <li>Encouraging physical exercise in women and children
-                        </li>
-                        <li>Providing an environment for organised sports
-                        </li>
-                        <li>Coaching social sporting teams
-                        </li>
-                    </ul>
-                  </nav>
-         
-                  <footer>
-                     <p class="copyright"> copyright 2020 reem alawad
-                    </p>
-                   </footer>  
-
+  <head>
+    <title>experience</title>
+    <link rel="stylesheet" href="reem.css">
+  </head>
+  <body>
+    <main>
+      <header>
+        <h1>Experience</h1>
+      </header>
+      <nav>
+        <h2>permanent store assistant (ALDI)</h2>
+        <ul>
+          <li>professional customer service</li>
+          <li>filling of shelves</li>
+          <li>check dates for products </li>
+          <li>priority cashier and being in charge of checkout service</li>
+          <li>Assist customers to find items when required.</li>
+          <li>count and being responsible for till and money</li>
+          <li>refund and warranty service</li>
+          <li>prepare special buys</li>
+        </ul>
+      </nav>
+      <br>
+      <nav>
+        <h2 class="woolworth">Permanent casual Checkout Service (woolworth)</h2>
+        <ul>
+          <li>Customer Service /li>
+          <li>Cashier and Self-checkout Operator</li>
+          <li>Assist customers to find items when required</li>
+          <li>Closing till at end of day</li>
+        </ul>
+      </nav>
+      <br>
+      <nav>
+        <h2 class="vinc">assistant (St Vincretail)</h2>
+        <ul>
+          <li>customer service</li>
+          <li>price setting</li>
+        </ul>
+      </nav>
+      <br>
+      <nav>
+        <h2 class="child care">work experienc (Meadowbrook Childcare Centre)</h2>
+        <ul>
+          <li>Supervise and monitor the safety of children</li>
+          <li>Prepare meals and organize mealtimes and snacks for children.</li>
+          <li>Help children keep good hygiene.</li>
+          <li>Change the diapers of infants and toddlers.</li>
+        </ul>
+      </nav>
+      <br>
+      <nav>
+        <h2 class="Secretary">Secretary (Adaleel Engineering Consultants, Dubai)</h2>
+        <ul>
+          <li>Managing reception</li>
+          <li>Customer Service, answering phones, providing information to visitors</li>
+          <li>Administration, filing, document keeping</li>
+          <li>Computer usage including emails, Microsoft (Word, Excel, PowerPoint), and research</li>
+        </ul>
+      </nav>
+      <br>
+      <nav>
+        <h2 class="teacher">Physical Education Teacher(Adnan Eisa High School, Syria)</h2>
+        <ul>
+          <li>Teaching the theory of physical education and health</li>
+          <li>Teaching basic skills in athletics and sports</li>
+          <li>Organising and coaching school sports teams</li>
+          <li>Encouraging students at all levels of physical ability</li>
+          <li>Maintaining a structured classroom environment</li>
+        </ul>
+      </nav>
+      <br>
+      <nav>
+        <h2 class="UNICEF">Physical Education Teacher (UNICEF, Syria)</h2>
+        <ul>
+          <li>Implementing recreational programs for children living in refugee camps</li>
+          <li>Encouraging physical exercise in women and children</li>
+          <li>Providing an environment for organised sports</li>
+          <li>Coaching social sporting teams</li>
+        </ul>
+      </nav>
+      <footer>
+        <p class="copyright">copyright 2020 reem alawad</p>
+      </footer>
     </main>
-   </body>
+  </body>
 </html>
