--- a/Experience.html
+++ b/Experience.html
@@ -5,10 +5,17 @@
     <link rel="stylesheet" href="reem.css">
   </head>
   <body>
+    <header>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="education.html"> education</a></li>
+        <li><a href="skills.html">skills</a></li>
+        <li><a href="experience.html">Experience</a></li>
+        <li><a href="contact.html">contact me</a></li>
+      </ul>
+    </header>
     <main>
-      <header>
-        <h1>Experience</h1>
-      </header>
+      <h1>Experience</h1>
       <nav>
         <h2>permanent store assistant (ALDI)</h2>
         <ul>
@@ -24,7 +31,7 @@
       </nav>
       <br>
       <nav>
-        <h2 class="woolworth">Permanent casual Checkout Service (woolworth)</h2>
+        <h2>Permanent casual Checkout Service (woolworth)</h2>
         <ul>
           <li>Customer Service /li>
           <li>Cashier and Self-checkout Operator</li>
@@ -34,7 +41,7 @@
       </nav>
       <br>
       <nav>
-        <h2 class="vinc">assistant (St Vincretail)</h2>
+        <h2>assistant (St Vincretail)</h2>
         <ul>
           <li>customer service</li>
           <li>price setting</li>
@@ -42,7 +49,7 @@
       </nav>
       <br>
       <nav>
-        <h2 class="child care">work experienc (Meadowbrook Childcare Centre)</h2>
+        <h2>work experienc (Meadowbrook Childcare Centre)</h2>
         <ul>
           <li>Supervise and monitor the safety of children</li>
           <li>Prepare meals and organize mealtimes and snacks for children.</li>
@@ -52,7 +59,7 @@
       </nav>
       <br>
       <nav>
-        <h2 class="Secretary">Secretary (Adaleel Engineering Consultants, Dubai)</h2>
+        <h2>Secretary (Adaleel Engineering Consultants, Dubai)</h2>
         <ul>
           <li>Managing reception</li>
           <li>Customer Service, answering phones, providing information to visitors</li>
@@ -62,7 +69,7 @@
       </nav>
       <br>
       <nav>
-        <h2 class="teacher">Physical Education Teacher(Adnan Eisa High School, Syria)</h2>
+        <h2>Physical Education Teacher(Adnan Eisa High School, Syria)</h2>
         <ul>
           <li>Teaching the theory of physical education and health</li>
           <li>Teaching basic skills in athletics and sports</li>
@@ -73,7 +80,7 @@
       </nav>
       <br>
       <nav>
-        <h2 class="UNICEF">Physical Education Teacher (UNICEF, Syria)</h2>
+        <h2>Physical Education Teacher (UNICEF, Syria)</h2>
         <ul>
           <li>Implementing recreational programs for children living in refugee camps</li>
           <li>Encouraging physical exercise in women and children</li>
@@ -81,9 +88,9 @@
           <li>Coaching social sporting teams</li>
         </ul>
       </nav>
-      <footer>
-        <p class="copyright">copyright 2020 reem alawad</p>
-      </footer>
     </main>
+    <footer>
+      <p>copyright 2020 reem alawad</p>
+    </footer>
   </body>
 </html>
