--- a/contact.html
+++ b/contact.html
@@ -5,10 +5,17 @@
     <link rel="stylesheet" href="reem.css">
   </head>
   <body>
+    <header>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="education.html"> education</a></li>
+        <li><a href="skills.html">skills</a></li>
+        <li><a href="experience.html">Experience</a></li>
+        <li><a href="contact.html">contact me</a></li>
+      </ul>
+    </header>
     <main>
-      <header>
-        <h1>contact details</h1>
-      </header>
+      <h1>contact details</h1>
       <nav>
         <ul>
           <li><a href="mailto:reem.awad3@gmail.com">Send email</a></li>
@@ -16,9 +23,9 @@
           <li><a href="https://www.linkedin.com/in/reem-alawad-060596111/">linkedin</a></li>
         </ul>
       </nav>
-      <footer>
-        <p class="copyright">copyright 2020 reem alawad</p>
-      </footer>
     </main>
+    <footer>
+      <p class="copyright">copyright 2020 reem alawad</p>
+    </footer>
   </body>
 </html>
