--- a/education.html
+++ b/education.html
@@ -5,22 +5,28 @@
     <link rel="stylesheet" href="reem.css">
   </head>
   <body>
+    <header>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="education.html"> education</a></li>
+        <li><a href="skills.html">skills</a></li>
+        <li><a href="experience.html">Experience</a></li>
+        <li><a href="contact.html">contact me</a></li>
+      </ul>
+    </header>
     <main>
-      <header>
-        <h1>education</h1>
-      </header>
+      <h1>education</h1>
       <nav>
-        <ul><em>
-            <li>Cert 3 child care 2018 Strategix training</li>
-            <li>Cert 3 business administration 2017 Strive International</li>
-            <li>Adult Migrant English program- level 3 2017 Loganlea TAFE</li>
-            <li>Bachelor of Physical Education 2015 Hama University</li>
-          </em>
+        <ul>
+          <li>Cert 3 child care 2018 Strategix training</li>
+          <li>Cert 3 business administration 2017 Strive International</li>
+          <li>Adult Migrant English program- level 3 2017 Loganlea TAFE</li>
+          <li>Bachelor of Physical Education 2015 Hama University</li>
         </ul>
       </nav>
-      <footer>
-        <p class="copyright">copyright 2020 reem alawad</p>
-      </footer>
     </main>
+    <footer>
+      <p class="copyright">copyright 2020 reem alawad</p>
+    </footer>
   </body>
 </html>
