--- a/index.html
+++ b/index.html
@@ -6,25 +6,27 @@
     <title> reem's website</title>
   </head>
   <body>
+    <header>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="education.html"> Education</a></li>
+        <li><a href="skills.html">Skills</a></li>
+        <li><a href="experience.html">Experience</a></li>
+        <li><a href="contact.html">Contact me</a></li>
+      </ul>
+    </header>
     <main>
-      <header>
-        <ul>
-          <li><a href="education.html"> education</a></li>
-          <li><a href="skills.html">skills</a></li>
-          <li><a href="Experience.html">Experience</a></li>
-          <li><a href="contact.html">contact me</a></li>
-        </ul>
-      </header>
+      <article>
+        <h2>About me</h2>
+        <p>Having moved to Australia 4 years ago I am looking for employment where I can transfer and use my organisational skills and my passion for working with people. I am a qualified Physical Education teacher from Syria but also have experience as a secretary /administration officer from UAE and customer service here in Australia so am very organised and punctual. I am bilingual in Arabic and English and have a positive bubbly personality. I am willing to take on a variety of roles.</p>
+      </article>
       <aside>
         <img src="photo/formal.jpg" alt="my photo">
       </aside>
-      <article>
-        <h2>career objective</h2>
-        <p>Having moved to Australia 4 years ago I am looking for employment where I can transfer and use my organisational skills and my passion for working with people. I am a qualified Physical Education teacher from Syria but also have experience as a secretary /administration officer from UAE and customer service here in Australia so am very organised and punctual. I am bilingual in Arabic and English and have a positive bubbly personality. I am willing to take on a variety of roles.</p>
-      </article>
-      <footer>
-        <p class="copyright">copyright 2020 reem alawad</p>
-      </footer>
+     
     </main>
+    <footer>
+      <p class="copyright">copyright 2020 reem alawad</p>
+    </footer>
   </body>
 </html>
