--- a/skills.html
+++ b/skills.html
@@ -2,13 +2,20 @@
 <html>
   <head>
     <title>Skills</title>
-    <link rel="stylesheet" href="reem.CSS">
+    <link rel="stylesheet" href="reem.css">
   </head>
   <body>
+    <header>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="education.html"> education</a></li>
+        <li><a href="skills.html">skills</a></li>
+        <li><a href="experience.html">Experience</a></li>
+        <li><a href="contact.html">contact me</a></li>
+      </ul>
+    </header>
     <main>
-      <header>
-        <h1>skills</h1>
-      </header>
+      <h1>skills</h1>
       <nav>
         <ul>
           <li>Communication</li>
@@ -17,9 +24,9 @@
           <li>Management Skills</li>
         </ul>
       </nav>
-      <footer>
-        <p class="copyright">copyright 2020 reem alawad</p>
-      </footer>
     </main>
+    <footer>
+      <p class="copyright">copyright 2020 reem alawad</p>
+    </footer>
   </body>
 </html>
