console hello world

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title> reem's website</title>
+    <script src="test.js"></script>
   </head>
   <body>
     <header>
